# kb-knowledge

./: .env.example  .gitignore  README.md  pyproject.toml
data/kakaobank_knowledge/v0/knowledge_base/: INDEX.md
data/kakaobank_knowledge/v0/knowledge_base/documents/: doc_kakao_common_policy_auto_transfer_001.json  doc_kakao_common_policy_auto_transfer_002.json  doc_kakao_common_policy_auto_transfer_003.json  doc_kakao_common_policy_business_credit_refinance_common_001.json  doc_kakao_common_policy_business_credit_refinance_common_002.json  doc_kakao_common_policy_business_credit_refinance_common_003.json  doc_kakao_common_policy_card_common_001.json  doc_kakao_common_policy_card_common_002.json  doc_kakao_common_policy_card_common_003.json  doc_kakao_common_policy_child_service_common_001.json  doc_kakao_common_policy_child_service_common_002.json  doc_kakao_common_policy_child_service_common_003.json  doc_kakao_common_policy_credit_loan_contract_common_001.json  doc_kakao_common_policy_credit_loan_contract_common_002.json  (+193 more)
data/kakaobank_knowledge/v0/schema/: action_verifier_state.json
data/kakaobank_knowledge/v0/tasks/: db.json  tasks.json  tasks.summary.md
docs/: expected_action_manual_checklist.md  multi_write_order_classification.md  transaction_table_design_review.md
scripts/: generate_expected_action_checklist.py
src/kb_knowledge/: __init__.py  cli.py
src/kb_knowledge/kakaobank/: __init__.py  data_model.py  db_query.py  replay.py  runner.py  tool_arg_models.py  tools.py
tests/: test_kakaobank_tool_arg_models.py
(+123 files in other folders)
