[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kb-knowledge"
version = "0.1.0"
description = "KakaoBank knowledge v0 evaluator and OpenAI-compatible assistant runner"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "pydantic>=2.7.0",
  "rank-bm25>=0.2.2",
  "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.14.0",
]

[project.scripts]
kb-knowledge = "kb_knowledge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
